# hello-pytest-env

./: .gitignore  default.env  pyproject.toml  pytest.ini  readme.md
app/: main.py
app/core/: config.py  role.py
app/utils/: singleton.py
tests/: conftest.py
tests/unit/: test_role.py
