[project]
name = "hello-pytest-env"
version = "0.1.0"
description = "test project for pytest"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=80.3.0", "wheel"]
build-backend = "setuptools.build_meta"
